report phase 2